--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>坐标：北京<br/>
                 求职意向：web前端开发<br/>
                 年龄：23岁&nbsp;&nbsp;&nbsp;&nbsp;工作经验：4年<br/>
-                联系我： <a href="#">myname@163.com</a>
+                联系我： <a href="#">18238191737@139.com</a>
             </p>
         </div>
     </section>
@@ -90,27 +90,20 @@
         </div>
         <div class="layout record_list">
         <dl class="record_item">
-            <dt>2015/02 – 至今</dt>
+            <dt>2017/07 – 至今</dt>
             <dd class="record_bd">
-                <strong>通联支付网络服务股份有限公司</strong>
+                <strong>博高信息技术股份有限公司</strong>
                 <em>金融服务事业部 | 前端开发</em>
-                <p>负责网站页面设计、制作，flash动画以及与动态效果的实现。 涉及到的项目有：奉贤农业园区官网、上海招商网、松江招商网、宝山招商网、上海宏城发展有限公司官网、金山U谷官网、天裁秀商城等。</p>
+                <p>负责网站页面设计、制作以及与动态效果的实现。 涉及到的项目有：奉贤农业园区官网、上海招商网、松江招商网、宝山招商网、上海宏城发展有限公司官网、金山U谷官网、天裁秀商城等。</p>
             </dd>
         </dl>
+            
             <dl class="record_item">
-                <dt>2015/02 – 至今</dt>
+                <dt>2014/10 – 2016/12</dt>
                 <dd class="record_bd">
-                    <strong>通联支付网络服务股份有限公司</strong>
-                    <em>金融服务事业部 | 前端开发</em>
-                    <p>负责网站页面设计、制作，flash动画以及与动态效果的实现。 涉及到的项目有：奉贤农业园区官网、上海招商网、松江招商网、宝山招商网、上海宏城发展有限公司官网、金山U谷官网、天裁秀商城等。</p>
-                </dd>
-            </dl>
-            <dl class="record_item">
-                <dt>2013/04 – 2014/04</dt>
-                <dd class="record_bd">
-                    <strong>北京好车电子有限公司（好车网）</strong>
-                    <em>金融服务事业部 | 前端开发</em>
-                    <p>负责网站页面设计、制作，flash动画以及与动态效果的实现。 涉及到的项目有：奉贤农业园区官网、上海招商网、松江招商网、宝山招商网、上海宏城发展有限公司官网、金山U谷官网、天裁秀商城等。</p>
+                    <strong>武汉中京国际</strong>
+                    <em>三管</em>
+                    <p>责轮船机舱设备、主机维护及管理。</p>
                 </dd>
             </dl>
 
@@ -167,10 +160,5 @@
         </p>
     </address>
 </section>
-
-   
-
-
-
 </body>
 </html>
