--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="my_intro">
             <h2> Hi,我是郭璐<br/>
             一名前端开发工程师</h2>
-            <p>坐标：北京<br/>
+            <p>籍贯：河南<br/>
                 求职意向：web前端开发<br/>
-                年龄：27岁&nbsp;&nbsp;&nbsp;&nbsp;工作经验：4年<br/>
+                出生日期：1991.04&nbsp;&nbsp;&nbsp;&nbsp;工作经验：4年<br/>
                 联系我： <a href="#">18238191737@139.com</a>
             </p>
         </div>
