--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             <h2> Hi,我是郭璐<br/>
             一名前端开发工程师</h2>
             <p>籍贯：河南<br/>
+                
+                出生日期：1991.04<br/>
                 求职意向：web前端开发<br/>
-                出生日期：1991.04&nbsp;&nbsp;&nbsp;&nbsp;<br/>
                 联系我： <a href="#">18238191737@139.com</a>
             </p>
         </div>
